# portex_pkg

./: Cargo.toml  LICENSE  README.md  demotest.txt
app/: package-lock.json  tsconfig.json  tslint.json
app/scripts/: deploy_service.js
app/test/: service.spec.ts
service/: Cargo.toml
service/src/: lib.rs  main.rs  poly.rs  secret.rs  serde_impl.rs
service/src/rand_wrapper/: mod.rs
service/src/sub_pkg/: mod.rs
simulation/: demotest.txt
simulation/app/: package.json
simulation/app/scripts/: deploy_service.js
simulation/app/test/: service.spec.ts
simulation/service/src/: error.rs  into_fr.rs  lib.rs  main.rs  poly.rs  secret.rs  serde_impl.rs
simulation/service/src/end_user/: receiver.rs  sender.rs
simulation/service/src/parameter/: setting.rs
simulation/service/src/rand_wrapper/: rand04_compat.rs
simulation/service/src/sub_pkg/: instance.rs  manager.rs
